# KineIA

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  chat.py  knowledge.py  search.py
backend/app/core/auth/: dependencies.py
backend/app/core/ingestion/: chunker.py  embedder.py  pipeline.py
backend/app/core/ingestion/extractors/: markdown.py  pdf.py  text.py
backend/app/core/llm/: provider.py
backend/app/core/rag/: prompts.py
backend/app/db/: postgres.py  qdrant.py
backend/app/models/: __init__.py  conversation.py  document.py  message.py  user.py
backend/app/services/: auth_service.py  chat_service.py
backend/app/services/rag/: retriever.py
backend/app/utils/: evidence.py
backend/scripts/: ingest_kb.py
docs/: investigacion-inicial.md
docs/sdd/: 01-proposal.md  02-spec.md  03-design.md  04-tasks.md
frontend/: .dockerignore  package-lock.json  package.json
knowledge_base/anatomia/: inserciones-miembro-inferior.md  inserciones-miembro-superior.md  inserciones-tronco.md
knowledge_base/guias-clinicas/: consenso-rehabilitacion-respiratoria-argentina.md  guia-epoc-gold-2024.md  guia-hombro-doloroso.md  guia-kinesiologia-geriatrica.md  guia-kinesiologia-pediatrica.md  guia-kinesiologia-respiratoria-adulto.md  guia-movilizacion-temprana-uci.md  kinesiologia-uci-argentina.md
knowledge_base/libros/: anatomia-latarjet-ruiz-liard.md  (+18 more)
scripts/: seed-knowledge.py
(+30 files in other folders)
